<resources>
    <string name="app_name">慧翼科技溯源系统</string>
    <string name="soft_update_title">检查到最新版本！</string>
    <string name="soft_update_info">更新内容：1、增加了包装关联功能2、增加了清空数据库功能</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="string_storage_hint">提示 :</string>
    <!-- main -->
    <string name ="string_shipment">出货管理</string>
    <string name ="string_refund">退货管理</string>
    <string name ="string_update">更新数据</string>
    <string name ="string_exit">退出管理</string>
    <string name="string_title">慧翼科技溯源平台</string>
    <string name="string_login_name">请输入账号</string>
    <string name="string_login_password">请输入密码</string>
    <string name="string_set">设置</string>
    <string name="string_login">登录</string>
    <string name="string_versions">版本:1.11</string>
    <string name="string_about">设置</string>
    <string name="string_remember">记住密码</string>
    <!-- about -->
    <string name="string_address">服务器地址:</string>
    <!-- update -->
    <string name="string_update_update">更新</string>
    <string name="string_about_save">保存</string>
    <!-- refund -->
    <string name="string_refund_return_reason">退货原因 :</string>
    <string name="string_local_deletion">本地删除</string>
    <string name="string_refund_return_time">退货时间 :</string>
    <string name="string_refund_return_offline">离线退货</string>
    <string name="string_refund_bar_code">条码 :</string>
    <!-- shipment -->
    <string name="string_shipment_delivery_order">交货单号 :</string>
    <string name="string_shipment_order">交货订单 :</string>
    <string name="string_shipment_customer_name">客户名称 :</string>
    <string name="string_shipment_shipping_time">出货时间 :</string>
    <string name="string_shipment_offline_shipment">离线出货</string>
    <string name="string_shipment_qr_number">离线扫描数量 :</string>
    <string name="string_shipment_seek">搜索</string>
    <string name="string_shipment_product_number">产品编号 :</string>
    <string name="string_shipment_product_name">产品名称 :</string>
    <string name="string_shipment_customer_number">客户编号 :</string>
    <string name="string_shipment_shipping_address">收货地址 :</string>
    <string name="string_shipment_shipping_number">出货数量 :</string>
    <string name="string_shipment_shipping_kuname">出库库别 :</string>
    <string name="string_shipment_uploading">上传</string>
    <string name="string_number_of_orders">下单数量 :</string>
    <string name="string_number_of_issued">已发数量 :</string>
</resources>
